--- a/src/assets/scss/const.scss
+++ b/src/assets/scss/const.scss
@@ -20,3 +20,22 @@
 // $color-text-d               : rgba(255, 255, 255, 0.3);
 // $color-text-l               : rgba(255, 255, 255, 0.5);
 // $color-text-ll              : rgba(255, 255, 255, 0.8);
+.btn{
+  height:38px;
+  line-height:38px;
+  width:100%;
+  background: #3f83e6;
+  color:#fff;
+  font-size: 15px;
+  border-radius: 3px;
+  text-align: center;
+  margin-bottom: 80px;
+}
+//设置body 背景颜色
+.ping-bg{
+  position: fixed;
+  width: 100%;
+  height: 100%;
+  top: 0px;
+  background:#f5f5f5;
+}
