--- a/src/assets/scss/const.scss
+++ b/src/assets/scss/const.scss
@@ -39,3 +39,16 @@
   top: 0px;
   background:#f5f5f5;
 }
+//设置弹框背景
+.pop-bg{
+  position: fixed;
+  width: 100%;
+  height: 100%;
+  top: 0px;
+  background: rgba(51, 51, 51, 0.5);
+  z-index: 999;
+  padding: 0 2.7%;
+}
+em{
+  font-style: normal;
+}
