资讯页面样式调整

--- a/src/assets/scss/const.scss
+++ b/src/assets/scss/const.scss
@@ -52,3 +52,14 @@
 em{
   font-style: normal;
 }
+.news{
+  .title-box{
+    .count{
+      height:18px;
+      display: inline-block;
+      line-height: 18px;
+      margin-top: 2px;
+    }
+  }
+}
+
