--- a/src/assets/scss/index.scss
+++ b/src/assets/scss/index.scss
@@ -1,12 +1,28 @@
-.index-industry{
-  .swiper-slider{
-    .swiper-button-next,.swiper-button-prev{
-      //background-image: url("../img/slider-next.png");
-      //@include bg-image("../img/slider-next");
+//行业分类图标滑动
+@mixin bg-image($name) {
+  background-image: url($name + '@2x.png');
+  @media (-webkit-min-device-pixel-ratio: 3), (min-device-pixel-ratio: 3) {
+    background-image: url($name + "@3x.png");
+  }
+}
+#index-industry{
+  .swiper-button-next,.swiper-button-prev{
+    background-size: 6px 10px;
+    width:6px;
+    height:10px;
+    background-color:#bdd5f6 ;
+    padding:10px 2px;
+    margin-top: -15px;
+    &:focus{
+      outline: none;
     }
-    .swiper-button-prev{
-      //background-image: url("../img/slider-prev.png");
-      //@include bg-image("../img/slider-prev");
-    }
+  }
+  .swiper-button-prev{
+    left: 0;
+    @include bg-image("../../assets/img/slider-prev");
+  }
+  .swiper-button-next{
+    right:0;
+    @include bg-image("../../assets/img/slider-next");
   }
 }
