--- a/src/assets/scss/reset.scss
+++ b/src/assets/scss/reset.scss
@@ -45,6 +45,9 @@ table { border-collapse: collapse; border-spacing: 0; }
 /* 显示隐藏 */
 .hide { display: none; }
 .show { display: block; }
+h1,h2,h3,h4,h5,h6{
+  font-weight: normal;
+}
 
 /* 移动设备 */
 body {
