--- a/src/assets/scss/reset.scss
+++ b/src/assets/scss/reset.scss
@@ -48,6 +48,9 @@ table { border-collapse: collapse; border-spacing: 0; }
 h1,h2,h3,h4,h5,h6{
   font-weight: normal;
 }
+input{
+  outline: none;
+}
 
 /* 移动设备 */
 body {
