--- a/src/assets/scss/reset.scss
+++ b/src/assets/scss/reset.scss
@@ -13,6 +13,8 @@ body, h1, h2, h3, h4, h5, h6, hr, p, blockquote,
 pre,dl, dt, dd, ul, ol, li,
 form, fieldset, lengend, button, input, textarea,
 th, td { margin: 0; padding: 0; }
+//微信浏览器兼容性
+div{background: #fff;}
 
 /* 重置列表元素 */
 ul, ol { list-style: none; }
