微信内置浏览器默认背景颜色修改

--- a/src/assets/scss/const.scss
+++ b/src/assets/scss/const.scss
@@ -89,7 +89,9 @@ em{
     }
   }
 }
-
+#sliderIndex1 .mint-swipe-indicators{
+  background: none;
+}
 #slider1 .mint-swipe-indicators {
   right:-50px;
   left: initial;
