--- a/src/assets/scss/reset.scss
+++ b/src/assets/scss/reset.scss
@@ -14,7 +14,7 @@ pre,dl, dt, dd, ul, ol, li,
 form, fieldset, lengend, button, input, textarea,
 th, td { margin: 0; padding: 0; }
 //微信浏览器兼容性
-div{background: #fff;}
+//div{background: #fff;}
 
 /* 重置列表元素 */
 ul, ol { list-style: none; }
