--- a/src/assets/scss/reset.scss
+++ b/src/assets/scss/reset.scss
@@ -78,3 +78,12 @@ body {
 @media screen and (-webkit-min-device-pixel-ratio: 3) {
   .border { border: 0.333333px solid #dedede }
 }
+.bg-blank{background: #fff;}
+//设置body 背景颜色
+.ping-blank{
+  position: fixed;
+  width: 100%;
+  height: 100%;
+  top: 0px;
+  background:#fff;
+}
